RESOLVED FIXED12105
Reproducable crash when visiting Acid2 test page
https://bugs.webkit.org/show_bug.cgi?id=12105
Summary Reproducable crash when visiting Acid2 test page
Benjamin Kuperman
Reported 2007-01-03 12:59:25 PST
Having had some stability issues with Safari, and wanting better CSS features, I thought I'd give WebKit a try. Ironically, the first test that I did with it causes the browser to crash. Go to: http://www.webstandards.org/files/acid2/test.html Click on left link: http://www.webstandards.org/files/acid2/test.html#top Going directly to the test page does not cause a crash.
Attachments
Crash log (21.39 KB, text/plain)
2007-01-03 13:02 PST, Benjamin Kuperman
no flags
Proposed fix (5.85 KB, patch)
2007-01-03 14:00 PST, Brady Eidson
darin: review+
Benjamin Kuperman
Comment 1 2007-01-03 13:02:38 PST
Created attachment 12197 [details] Crash log Cut-and-paste of crash information
David Kilzer (:ddkilzer)
Comment 2 2007-01-03 13:30:58 PST
Crash in WebKit nightly r18541 per crash log.
Brady Eidson
Comment 3 2007-01-03 13:55:33 PST
Even an ASSERT in a debug build - got a null DocumentLoader - but this stuff was just carried over from the WebKit design and I fell into the "lost free nil-checking" trap... ugh I have a patch on its way
Brady Eidson
Comment 4 2007-01-03 14:00:59 PST
Created attachment 12202 [details] Proposed fix
Darin Adler
Comment 5 2007-01-03 14:05:55 PST
Comment on attachment 12202 [details] Proposed fix r=me
Brady Eidson
Comment 6 2007-01-03 14:35:41 PST
Committed in r18553 because this was an important fix - though I am going to tinker with making a layout test later tonite
Note You need to log in before you can comment on or make changes to this bug.